--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
     "@react-native-community/slider": "5.0.1",
     "expo": "~54.0.33",
     "expo-haptics": "~15.0.8",
+    "expo-network": "~8.0.8",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.563.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-zeroconf": "^0.14.0"
   },
   "private": true
