feat: Add new port func

--- a/client/app.json
+++ b/client/app.json
@@ -7,7 +7,6 @@
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -15,7 +14,9 @@
       "supportsTablet": true,
       "infoPlist": {
         "NSLocalNetworkUsageDescription": "Discover and connect to PCs on your local network.",
-        "NSBonjourServices": ["_remotepad._tcp"]
+        "NSBonjourServices": [
+          "_remotepad._tcp"
+        ]
       }
     },
     "android": {
@@ -28,8 +29,13 @@
         "ACCESS_WIFI_STATE",
         "CHANGE_WIFI_MULTICAST_STATE",
         "NEARBY_WIFI_DEVICES"
-      ]
+      ],
+      "package": "com.aksandr.pccontrollclient"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "db12a56e-3e01-40e1-9600-f54cb2a02936"
+      }
     }
-    
   }
 }
