--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "npx expo start",
     "android": "npx expo start --android",
-    "dev": "npx expo start --dev-client",
+    "dev": "npx expo start --dev-client --tunnel",
     "ios": "npx expo start --ios",
     "web": "npx expo start --web"
   },
