--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/slider": "5.0.1",
     "expo": "~54.0.33",
+    "expo-clipboard": "~8.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-haptics": "~15.0.8",
     "expo-network": "~8.0.8",
